# todo

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: __init__.py  database.py  main.py  models.py
app/routers/: todos.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
docs/: STRATEGY.md
scripts/: find_port.py
tests/: test_todos.py
